# notion-inbox

./: .env.example  .gitignore  CONTEXT.md  README.md  pyproject.toml
capture/: .env.local.example  package-lock.json  package.json  proxy.ts
capture/.claude/: launch.json
capture/app/: layout.tsx  page.tsx
capture/app/actions/: auth.ts  capture.ts
capture/app/login/: page.tsx
notion_inbox/: cli.py  notion_client.py  triage.py
